Closed Bug 1035240 Opened 10 years ago Closed 10 years ago

[Bluetooth] BluetoothSocket leaks file descriptor

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
2.0 S6 (18july)

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

Details

Attachments

(1 file)

On close operations, the BluetoothSocket for Bluedroid only removes the file descriptor from the I/O loop. The file descriptor is not being closed nor referenced any longer.
It doesn't really depend on bug 1029387, but the patch won't apply cleanly without it.
Depends on: 1029387
Comment on attachment 8451683 [details] [diff] [review]
[01] Bug 1035240: Close file descriptor in BluetoothSocket

Review of attachment 8451683 [details] [diff] [review]:
-----------------------------------------------------------------

It looks good to me.
Attachment #8451683 - Flags: review?(shuang) → review+
Blocks: 1037342
https://hg.mozilla.org/mozilla-central/rev/08fe5757a75d
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S6 (18july)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: