Bug 1035240: Close file descriptor in BluetoothSocket, r=shuang

Currently, BluetoothSocket leaks its file descriptor on close
operations. With this patch when Gecko closes an instance of
BluetoothSocket, the file descriptor is now closed as well.